[gd_scene load_steps=3 format=2]

[ext_resource path="res://font/LINUSN.tres" type="DynamicFont" id=1]
[ext_resource path="res://Stavby.gd" type="Script" id=2]

[node name="Stavby" type="GridContainer"]
margin_left = 250.0
margin_top = 100.0
margin_right = 356.0
margin_bottom = 142.0
columns = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lPole" type="Label" parent="."]
margin_right = 109.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "Pole"

[node name="Pole" type="SpinBox" parent="."]
margin_left = 113.0
margin_right = 187.0
margin_bottom = 36.0
hint_tooltip = "Výnos: 5 obilí
Cena: 20 Vodolarů"
max_value = 100000.0

[node name="lPoleDelta" type="Label" parent="."]
margin_left = 191.0
margin_right = 202.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="lLom" type="Label" parent="."]
margin_top = 40.0
margin_right = 109.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 1 )
text = "Lom"

[node name="Lom" type="SpinBox" parent="."]
margin_left = 113.0
margin_top = 40.0
margin_right = 187.0
margin_bottom = 76.0
max_value = 100000.0

[node name="lLomDelta" type="Label" parent="."]
margin_left = 191.0
margin_top = 40.0
margin_right = 202.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="lKamenictvi" type="Label" parent="."]
margin_top = 80.0
margin_right = 109.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 1 )
text = "Kamenictví"

[node name="Kamenictvi" type="SpinBox" parent="."]
margin_left = 113.0
margin_top = 80.0
margin_right = 187.0
margin_bottom = 116.0
max_value = 100000.0

[node name="lKamenictviDelta" type="Label" parent="."]
margin_left = 191.0
margin_top = 80.0
margin_right = 202.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="lHostinec" type="Label" parent="."]
margin_top = 120.0
margin_right = 109.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 1 )
text = "Hostinec"

[node name="Hostinec" type="SpinBox" parent="."]
margin_left = 113.0
margin_top = 120.0
margin_right = 187.0
margin_bottom = 156.0
max_value = 100000.0

[node name="lHostinecDelta" type="Label" parent="."]
margin_left = 191.0
margin_top = 120.0
margin_right = 202.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="lKaple" type="Label" parent="."]
margin_top = 160.0
margin_right = 109.0
margin_bottom = 196.0
custom_fonts/font = ExtResource( 1 )
text = "Kaple"

[node name="Kaple" type="SpinBox" parent="."]
margin_left = 113.0
margin_top = 160.0
margin_right = 187.0
margin_bottom = 196.0
max_value = 100000.0

[node name="lKapleDelta" type="Label" parent="."]
margin_left = 191.0
margin_top = 160.0
margin_right = 202.0
margin_bottom = 196.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="lKostel" type="Label" parent="."]
margin_top = 200.0
margin_right = 109.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 1 )
text = "Kostel"

[node name="Kostel" type="SpinBox" parent="."]
margin_left = 113.0
margin_top = 200.0
margin_right = 187.0
margin_bottom = 236.0
max_value = 100000.0

[node name="lKostelDelta" type="Label" parent="."]
margin_left = 191.0
margin_top = 200.0
margin_right = 202.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 1 )
text = "0"

[node name="lKatedrala" type="Label" parent="."]
margin_top = 240.0
margin_right = 109.0
margin_bottom = 276.0
custom_fonts/font = ExtResource( 1 )
text = "Katedrála"

[node name="Katedrala" type="SpinBox" parent="."]
margin_left = 113.0
margin_top = 240.0
margin_right = 187.0
margin_bottom = 276.0
max_value = 100000.0

[node name="lKatedralaDelta" type="Label" parent="."]
margin_left = 191.0
margin_top = 240.0
margin_right = 202.0
margin_bottom = 276.0
custom_fonts/font = ExtResource( 1 )
text = "0"
[connection signal="value_changed" from="Pole" to="." method="_on_NejakaBudova_value_changed"]
[connection signal="value_changed" from="Lom" to="." method="_on_NejakaBudova_value_changed"]
[connection signal="value_changed" from="Kamenictvi" to="." method="_on_NejakaBudova_value_changed"]
[connection signal="value_changed" from="Hostinec" to="." method="_on_NejakaBudova_value_changed"]
[connection signal="value_changed" from="Kaple" to="." method="_on_NejakaBudova_value_changed"]
[connection signal="value_changed" from="Kostel" to="." method="_on_NejakaBudova_value_changed"]
[connection signal="value_changed" from="Katedrala" to="." method="_on_NejakaBudova_value_changed"]
